--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html xmlns:ng="http://angularjs.org" id="ng-app" data-ng-app="GamePortfolioApp">
+<html id="ng-app" data-ng-app="GamePortfolioApp">
   <head>
   	<meta name="viewport" content="width=device-width, initial-scale=1">
    	<meta charset="utf-8">
@@ -14,7 +14,7 @@
   </head>
   <body >
     <div class="wrapper" data-ng-class="currentView">
-	    <portfolioheader></portfolioheader>
+	    <div data-portfolioheader></div>
 	    
 		<div data-ng-view class="main" role="main">
 		</div>
